syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.Lighting";
option java_outer_classname = "LightingImpl";

package Lighting;

service LightingService {
  // Method 1
  // Single Room Set Lighting
  rpc SetRoomLighting(SetRoomLightingRequest) returns (SetRoomLightingResponse);

  // Method 2
  // Automate Lighting time based
  rpc LightingAutomation(stream LightingAutomationRequest) returns (LightingAutomationResponse);

  // Method 3
  // Checks to see if light is on or off
  rpc LightingStatusRequest(Empty) returns (stream LightingStatusResponse);
}

message SetRoomLightingRequest {
  enum LightingState {
    ON = 0;
    OFF = 1;
  }
  string room_id = 1;
  LightingState state = 2;
}

message SetRoomLightingResponse {
  bool success = 1;
  string message = 2;
}

message LightingAutomationRequest {
  string room_id = 1;
  int32 hour = 2;
  int32 minute = 3;
  bool turn_on = 4;
}

message LightingAutomationResponse {
  bool success = 1;
  string message = 2;
}

message Empty {}

message LightingStatusResponse {
  string room_id = 1;
  bool is_on = 2;
}